--- a/scss/style.scss
+++ b/scss/style.scss
@@ -296,19 +296,18 @@ p {
   padding-top: 120px;
 }
 .tabs {
-  margin-top: 50px;
+  margin-top: 30px;
 }
-.tabs__line {
+.tabs__nav {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  flex-wrap: nowrap;
-}
-.tabs__line + .tabs__line {
-  margin-top: 20px;
+  flex-wrap: wrap;
+  max-height: 168px;
 }
 .tabs__nav-item {
-  box-sizing: border-box;
+  margin-right: 20px;
+  margin-top: 20px;
   padding: 17px 20px;
   font-size: 26px;
   line-height: 1;
@@ -317,9 +316,6 @@ p {
   border-radius: 10px;
   transition: all 0.3s;
   cursor: pointer;
-}
-.tabs__nav-item + .tabs__nav-item {
-  margin-left: 20px;
 }
 .tabs__nav-item:hover {
   background-color: $dark-blue;
