--- a/scss/style.scss
+++ b/scss/style.scss
@@ -303,7 +303,6 @@ p {
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
-  max-height: 168px;
 }
 .tabs__nav-item {
   margin-right: 20px;
@@ -330,7 +329,7 @@ p {
 }
 .tabs__content {
   display: none;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 23.5%);
   grid-gap: 15px 20px;
   margin-top: 60px;
 }
@@ -369,7 +368,8 @@ p {
 }
 .tabs__name {
   margin-top: 20px;
-  max-width: 250px;
+  width: 250px;
+  max-width: 100%;
   @extend %probapro-bold;
   font-size: 22px;
   line-height: 1;
