Mobile menu added

--- a/css/media.css
+++ b/css/media.css
@@ -193,6 +193,59 @@
     -webkit-transform: rotate(-45deg) translateY(-6.4px) translateX(6.2px);
             transform: rotate(-45deg) translateY(-6.4px) translateX(6.2px);
   }
+  .header__nav--visible {
+    position: fixed;
+    display: block;
+    top: 76px;
+    left: 0;
+    right: 0;
+    bottom: 70px;
+    margin-left: 0;
+    padding-top: 49px;
+    padding-left: 25px;
+    background-color: #fff;
+  }
+  .header__nav--visible .header__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .header__item + .header__item {
+    margin-left: 0;
+    margin-top: 40px;
+  }
+  .header__list {
+    font-size: 36px;
+    font-family: 'FuturaPT-Bold', sans-serif;
+    font-weight: 700;
+    text-transform: initial;
+  }
+  .header__link--phone {
+    display: none;
+  }
+  .footer--visible .footer__social {
+    position: fixed;
+    left: 25px;
+    bottom: 145px;
+    z-index: 14;
+  }
+  .footer--visible .footer__mobile {
+    position: fixed;
+    left: 25px;
+    bottom: 111px;
+    z-index: 14;
+  }
+  .footer--visible .footer__social-img {
+    width: 40px;
+    height: 40px;
+  }
+  .footer--visible .footer__social-item:last-child {
+    margin-left: 10px;
+  }
   .hero__title {
     font-size: 54px;
   }
@@ -381,6 +434,9 @@
   }
   .header__logo {
     width: 171px;
+  }
+  .header__nav--visible {
+    top: 57px;
   }
   .hero {
     padding: 66px 0;
