--- a/scss/media.scss
+++ b/scss/media.scss
@@ -172,6 +172,54 @@
   .header__btn-mobile--active .header__line:last-child {
     transform: rotate(-45deg) translateY(-6.4px) translateX(6.2px);
   }
+  .header__nav--visible {
+    position: fixed;
+    display: block;
+    top: 76px;
+    left: 0;
+    right: 0;
+    bottom: 70px;
+    margin-left: 0;
+    padding-top: 49px;
+    padding-left: 25px;
+    background-color: #fff;
+  }
+  .header__nav--visible .header__list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .header__item + .header__item {
+    margin-left: 0;
+    margin-top: 40px;
+  }
+  .header__list {
+    font-size: 36px;
+    font-family: 'FuturaPT-Bold', sans-serif;
+    font-weight: 700;
+    text-transform: initial;
+  }
+  .header__link--phone {
+    display: none;
+  }
+  .footer--visible .footer__social {
+    position: fixed;
+    left: 25px;
+    bottom: 145px;
+    z-index: 14;
+  }
+  .footer--visible .footer__mobile {
+    position: fixed;
+    left: 25px;
+    bottom: 111px;
+    z-index: 14;
+  }
+  .footer--visible .footer__social-img {
+    width: 40px;
+    height: 40px;
+  }
+  .footer--visible .footer__social-item:last-child {
+    margin-left: 10px;
+  }
   .hero__title {
     font-size: 54px;
   }
@@ -344,6 +392,9 @@
   }
   .header__logo {
     width: 171px;
+  }
+  .header__nav--visible {
+    top: 57px;
   }
   .hero {
     padding: 66px 0;
