--- a/css/style.css
+++ b/css/style.css
@@ -33,34 +33,34 @@ body {
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
-.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
-.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
-.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input::placeholder,
-.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.header__list, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .text__title, .card__price {
+.header__list, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -209,7 +209,7 @@ p {
 }
 
 .header__link--phone:hover {
-  color: #414042;
+  color: #6cbab8;
 }
 
 .header__right {
@@ -254,7 +254,6 @@ p {
 
 .header__input:focus {
   outline: #6cbab8;
-  border: 1px solid #6cbab8;
 }
 
 .header__cart {
@@ -267,6 +266,7 @@ p {
   cursor: pointer;
   -webkit-transition: background 0.3s ease;
   transition: background 0.3s ease;
+  z-index: -1;
 }
 
 .header__cart:hover {
@@ -482,7 +482,7 @@ p {
   font-size: 26px;
   line-height: 1;
   background-color: #fff;
-  border: 2px solid #6cbab8;
+  border: 2px solid #008f99;
   border-radius: 10px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -490,9 +490,7 @@ p {
 }
 
 .tabs__nav-item:hover {
-  background-color: #008f99;
-  border: 2px solid #008f99;
-  color: #fff;
+  border: 2px solid #6cbab8;
 }
 
 .tabs__nav-item--active {
@@ -500,6 +498,10 @@ p {
   border: 2px solid #008f99;
   color: #fff;
   cursor: default;
+}
+
+.tabs__nav-item--active:hover {
+  border: 2px solid #008f99;
 }
 
 .tabs__content {
@@ -536,6 +538,7 @@ p {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2)));
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
   border: 1px solid #efefef;
+  cursor: pointer;
 }
 
 .tabs__tag {
@@ -828,6 +831,7 @@ p {
   line-height: 1;
   background: rgba(255, 255, 255, 0.2);
   border: 1px solid #6cbab8;
+  outline: transparent;
 }
 
 .form__input + .form__input {
@@ -844,6 +848,7 @@ p {
   background: rgba(255, 255, 255, 0.2);
   border: 1px solid #6cbab8;
   resize: none;
+  outline: transparent;
 }
 
 .form__input::-webkit-input-placeholder,
@@ -864,12 +869,6 @@ p {
 .form__input::placeholder,
 .form__textarea::placeholder {
   color: #9e9a9a;
-}
-
-.form__input:focus,
-.form__textarea:focus,
-.form__btn:focus {
-  outline: 1px solid #008f99;
 }
 
 .form__btn {
@@ -992,7 +991,18 @@ p {
   width: 610px;
   max-width: 100%;
   background-color: #fff;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
   z-index: 14;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  transition: -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear;
+  transition: transform 0.3s linear, -webkit-transform 0.3s linear;
+}
+
+.cart--visible {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .cart__title {
@@ -1003,7 +1013,14 @@ p {
 
 .cart__items {
   margin-top: 60px;
+  margin-bottom: 60px;
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.cart__items::-webkit-scrollbar {
+  display: none;
 }
 
 .cart__item {
@@ -1063,12 +1080,12 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 105px;
+  width: 148px;
 }
 
 .cart__price {
   margin-top: 24px;
-  font-size: 15px;
+  font-size: 22px;
   line-height: 1;
 }
 
@@ -1082,9 +1099,9 @@ p {
 
 .cart__remove,
 .cart__add {
-  width: 30px;
-  height: 30px;
-  background: #6cbab8 no-repeat center;
+  width: 32px;
+  height: 32px;
+  background: #008f99 no-repeat center;
   cursor: pointer;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -1092,7 +1109,7 @@ p {
 
 .cart__remove:hover,
 .cart__add:hover {
-  background-color: #008f99;
+  background-color: #6cbab8;
 }
 
 .cart__remove {
@@ -1108,7 +1125,7 @@ p {
 .cart__input {
   width: 30px;
   padding: 0 5px;
-  font-size: 22px;
+  font-size: 15px;
   line-height: 1;
   text-align: center;
   border: none;
@@ -1117,21 +1134,7 @@ p {
 .cart__bottom {
   position: relative;
   margin-top: auto;
-  padding-top: 40px;
   width: 100%;
-}
-
-.cart__bottom::before {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 370px;
-  max-width: 90%;
-  height: 1px;
-  background-color: #6cbab8;
 }
 
 .cart__amount {
@@ -1179,6 +1182,28 @@ p {
 
 .cart__btn:hover {
   background: #6cbab8;
+}
+
+.cart__close {
+  position: absolute;
+  right: 40px;
+  top: 40px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  background-image: url("/images/icons/close.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+
+.cart__close:hover {
+  opacity: 0.7;
 }
 
 .card {
@@ -1381,34 +1406,34 @@ body {
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
-.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
-.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
-.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .process__text, .tabs__price, .feedback__text-title, .form__input::placeholder,
-.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-number {
+.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-text {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.header__list, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .text__title, .card__price {
+.header__list, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -1560,7 +1585,7 @@ body {
     font-size: 18px;
   }
   .header__nav,
-  .header__right {
+  .header__search {
     display: none;
   }
   .header__btn-mobile {
@@ -1667,6 +1692,13 @@ body {
   }
   .footer--visible .footer__social-item:last-child {
     margin-left: 10px;
+  }
+  .header__cart {
+    position: fixed;
+    display: block;
+    bottom: 25px;
+    left: 0;
+    right: 0;
   }
   .hero__title {
     font-size: 54px;
@@ -1808,6 +1840,23 @@ body {
     font-size: 14px;
     line-height: 1;
     text-transform: uppercase;
+  }
+}
+
+@media (max-height: 578px) {
+  .footer--visible .footer__social {
+    left: unset;
+    right: 25px;
+  }
+  .footer--visible .footer__mobile {
+    left: unset;
+    right: 25px;
+  }
+}
+
+@media (max-height: 390px) {
+  .header__item + .header__item {
+    margin-top: 0;
   }
 }
 
