--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,7 +108,7 @@ p {
   color: $dark-blue;
 }
 .header__link--phone:hover {
-  color: $black;
+  color: $light-blue;
 }
 .header__right {
   display: flex;
@@ -131,7 +131,6 @@ p {
 }
 .header__input:focus {
   outline: $light-blue;
-  border: 1px solid $light-blue;
 }
 .header__cart {
   margin-left: 20px;
@@ -142,6 +141,7 @@ p {
   border: none;
   cursor: pointer;
   transition: background 0.3s ease;
+  z-index: -1;
 }
 .header__cart:hover {
   background: $light-blue url('/images/icons/cart-icon.svg') no-repeat 50% 50%;
@@ -320,21 +320,22 @@ p {
   font-size: 26px;
   line-height: 1;
   background-color: #fff;
-  border: 2px solid $light-blue;
+  border: 2px solid $dark-blue;
   border-radius: 10px;
   transition: all 0.3s;
   cursor: pointer;
 }
 .tabs__nav-item:hover {
-  background-color: $dark-blue;
-  border: 2px solid $dark-blue;
-  color: #fff;
+  border: 2px solid $light-blue;
 }
 .tabs__nav-item--active {
   background-color: $dark-blue;
   border: 2px solid $dark-blue;
   color: #fff;
   cursor: default;
+}
+.tabs__nav-item--active:hover {
+  border: 2px solid $dark-blue;
 }
 .tabs__content {
   display: none;
@@ -360,6 +361,7 @@ p {
     rgba(255, 255, 255, 0.2)
   );
   border: 1px solid #efefef;
+  cursor: pointer;
 }
 .tabs__tag {
   position: absolute;
@@ -602,6 +604,7 @@ p {
   line-height: 1;
   background: rgba(255, 255, 255, 0.2);
   border: 1px solid #6cbab8;
+  outline: transparent;
 }
 .form__input + .form__input {
   margin-top: 20px;
@@ -616,16 +619,12 @@ p {
   background: rgba(255, 255, 255, 0.2);
   border: 1px solid #6cbab8;
   resize: none;
+  outline: transparent;
 }
 .form__input::placeholder,
 .form__textarea::placeholder {
   @extend %probapro-medium;
   color: $dark-gray;
-}
-.form__input:focus,
-.form__textarea:focus,
-.form__btn:focus {
-  outline: 1px solid $dark-blue;
 }
 .form__btn {
   margin-top: 23px;
@@ -714,9 +713,13 @@ p {
   padding: 30px;
   width: 610px;
   max-width: 100%;
-  // min-height: 1000px;
   background-color: #fff;
+  transform: translateX(100%);
   z-index: 14;
+  transition: transform 0.3s linear;
+}
+.cart--visible {
+  transform: translateX(0);
 }
 .cart__title {
   @extend %futurapt-bold;
@@ -726,7 +729,13 @@ p {
 }
 .cart__items {
   margin-top: 60px;
+  margin-bottom: 60px;
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+.cart__items::-webkit-scrollbar {
+  display: none;
 }
 .cart__item {
   display: flex;
@@ -760,11 +769,12 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 105px;
+  width: 148px;
 }
 .cart__price {
   margin-top: 24px;
-  font-size: 15px;
+  @extend %probapro-bold;
+  font-size: 22px;
   line-height: 1;
 }
 .cart__weight {
@@ -776,15 +786,15 @@ p {
 }
 .cart__remove,
 .cart__add {
-  width: 30px;
-  height: 30px;
-  background: $light-blue no-repeat center;
+  width: 32px;
+  height: 32px;
+  background: $dark-blue no-repeat center;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 .cart__remove:hover,
 .cart__add:hover {
-  background-color: $dark-blue;
+  background-color: $light-blue;
 }
 .cart__remove {
   background-image: url('/images/icons/minus.svg');
@@ -797,7 +807,8 @@ p {
 .cart__input {
   width: 30px;
   padding: 0 5px;
-  font-size: 22px;
+  @extend %probapro-bold;
+  font-size: 15px;
   line-height: 1;
   text-align: center;
   border: none;
@@ -805,19 +816,7 @@ p {
 .cart__bottom {
   position: relative;
   margin-top: auto;
-  padding-top: 40px;
   width: 100%;
-}
-.cart__bottom::before {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 370px;
-  max-width: 90%;
-  height: 1px;
-  background-color: $light-blue;
 }
 .cart__amount {
   display: flex;
@@ -825,11 +824,12 @@ p {
   justify-content: space-between;
 }
 .cart__amount-text {
+  @extend %probapro-medium;
   font-size: 22px;
   line-height: 1;
 }
 .cart__amount-number {
-  @extend %probapro-medium;
+  @extend %probapro-bold;
   font-size: 30px;
   line-height: 1;
 }
@@ -853,6 +853,25 @@ p {
 }
 .cart__btn:hover {
   background: $light-blue;
+}
+.cart__close {
+  position: absolute;
+  right: 40px;
+  top: 40px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  background-image: url('/images/icons/close.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+.cart__close:hover {
+  opacity: 0.7;
 }
 // Cart end
 
