--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,6 +133,7 @@ p {
   outline: $light-blue;
 }
 .header__cart {
+  display: none;
   margin-left: 20px;
   width: 40px;
   height: 40px;
@@ -141,10 +142,12 @@ p {
   border: none;
   cursor: pointer;
   transition: background 0.3s ease;
-  z-index: -1;
 }
 .header__cart:hover {
   background: $light-blue url('/images/icons/cart-icon.svg') no-repeat 50% 50%;
+}
+.header__cart--visible {
+  display: block;
 }
 .header__btn-mobile {
   display: none;
