--- a/css/media.css
+++ b/css/media.css
@@ -449,6 +449,9 @@
   .swiper-pagination-bullet-active {
     background-color: #008f99;
   }
+  .cart__title {
+    font-size: 30px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -619,6 +622,49 @@
     -webkit-box-shadow: 0px 0px 0px 1px #fff, 0px 0px 0px 3.5px #ff7a50;
             box-shadow: 0px 0px 0px 1px #fff, 0px 0px 0px 3.5px #ff7a50;
     margin-right: 4px;
+  }
+  .cart {
+    padding: 20px;
+  }
+  .cart__close {
+    right: 20px;
+    top: 20px;
+  }
+  .cart__title {
+    font-size: 22px;
+  }
+  .cart__info {
+    margin-left: 10px;
+  }
+  .cart__img {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+  }
+  .cart__name {
+    font-size: 18px;
+  }
+  .cart__price {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  .cart__btn {
+    height: 40px;
+    font-size: 18px;
+  }
+  .cart__amount-number {
+    font-size: 24px;
+  }
+  .cart__amount-text {
+    font-size: 18px;
+  }
+  .cart__remove,
+  .cart__add {
+    width: 20px;
+    height: 20px;
+  }
+  .cart__number {
+    width: 80px;
   }
 }
 
