--- a/css/media.css
+++ b/css/media.css
@@ -633,6 +633,10 @@
   .cart__title {
     font-size: 22px;
   }
+  .cart__items {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
   .cart__info {
     margin-left: 10px;
   }
