--- a/css/style.css
+++ b/css/style.css
@@ -2083,6 +2083,10 @@ body {
   .cart__title {
     font-size: 22px;
   }
+  .cart__items {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
   .cart__info {
     margin-left: 10px;
   }
