--- a/scss/style.scss
+++ b/scss/style.scss
@@ -152,6 +152,45 @@ p {
 .header__btn-mobile {
   display: none;
 }
+.search {
+  position: absolute;
+  display: none;
+  top: 100%;
+  padding: 23px 23px 30px;
+  width: 560px;
+  background-color: #fff;
+}
+.search--visible {
+  display: block;
+}
+.search__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.search__item + .search__item {
+  margin-top: 14px;
+}
+.search__item-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+.search__item-name {
+  margin-right: auto;
+  margin-left: 20px;
+  @extend %probapro-medium;
+  font-size: 22px;
+  line-height: 1;
+}
+.search__item-price {
+  margin-left: 10px;
+  @extend %probapro-bold;
+  font-size: 22px;
+  line-height: 28px;
+}
 // Header end
 
 // Hero start
