--- a/css/style.css
+++ b/css/style.css
@@ -273,8 +273,25 @@ p {
   background: #6cbab8 url("/images/icons/cart-icon.svg") no-repeat 50% 50%;
 }
 
+.header__cart--filled {
+  width: auto;
+  padding: 5px 8px;
+  padding-left: 37px;
+  background-position: 5px center;
+}
+
+.header__cart--filled:hover {
+  background-color: #6cbab8;
+  background-position: 5px center;
+}
+
 .header__cart--visible {
   display: block;
+}
+
+.header__cart-amount {
+  font-size: 15px;
+  color: #fff;
 }
 
 .header__btn-mobile {
@@ -2126,21 +2143,21 @@ body {
     margin-right: 4px;
   }
   .cart {
-    padding: 20px;
+    padding: 25px;
   }
   .cart__close {
-    right: 20px;
-    top: 20px;
+    top: 35px;
+    right: 25px;
   }
   .cart__title {
-    font-size: 22px;
+    font-size: 30px;
   }
   .cart__items {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
   .cart__info {
-    margin-left: 10px;
+    margin-left: 16px;
   }
   .cart__img {
     width: 50px;
@@ -2148,29 +2165,33 @@ body {
     border-radius: 10px;
   }
   .cart__name {
-    font-size: 18px;
+    font-size: 14px;
   }
   .cart__price {
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 14px;
   }
   .cart__btn {
+    width: 220px;
     height: 40px;
-    font-size: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+    font-size: 15px;
   }
   .cart__amount-number {
-    font-size: 24px;
+    font-size: 18px;
   }
   .cart__amount-text {
-    font-size: 18px;
+    font-size: 15px;
   }
   .cart__remove,
   .cart__add {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
   }
   .cart__number {
-    width: 80px;
+    width: 101px;
   }
 }
 
