--- a/css/media.css
+++ b/css/media.css
@@ -252,6 +252,8 @@
     left: 25px;
     right: 0;
     margin-left: 0;
+  }
+  .header__cart--filled {
     padding: 12px 10px;
     padding-left: 37px;
     display: -webkit-box;
@@ -267,6 +269,14 @@
     font-size: 15px;
     color: #fff;
     text-align: right;
+  }
+  .header__cart-name,
+  .header__cart-amount {
+    display: none;
+  }
+  .header__cart--filled .header__cart-name,
+  .header__cart--filled .header__cart-amount {
+    display: block;
   }
   .hero__title {
     font-size: 54px;
